--- a/fp2019/projects.asciidoc
+++ b/fp2019/projects.asciidoc
@@ -78,6 +78,17 @@ Alt-Ergo (гроб)
 merlin
 ~~~~~~
 
+IDE для функциональных языков не очень хорошо развиты по нескольким причинами:
+* за счет другого подхода к программированию потребность в IDE не так сильно ощущается: так как меньше синтаксического мусора, то меньше нужды в автоматических рефакторингах, и прочее.
+* так как потредность в IDE не так ощущается, то мало кто уходит дальше минимальных требований к IDE, которыми явщяются: go-to-definition, показать тип под курсором, подсветка ошибок и прочие мелочи.
+
+Следствие: в области разработки IDE для функциональных языков можно много чего сделать.
+
+Сейчас стандартом IDE для языка OCaml является merlin, который умеет минимальный набор фич
+
+TODO: дописать
+
+
 
 [[active]]
 Active Patterns в OCaml (вроде как занята)
@@ -99,3 +110,17 @@ https://web.engr.oregonstate.edu/~erwig/papers/PGandTP_Haskell00.pdf[тут] и
 https://www.microsoft.com/en-us/research/wp-content/uploads/2016/08/pattern-synonyms-Haskell16.pdf[тут].
 
 На форуме OCaml уже https://discuss.ocaml.org/t/musings-on-extended-pattern-matching-syntaxes/3600[началось] обсуждение правильного синтаксиса.
+
+[[graphparsing]]
+Про парсинг графов с помощью грамматик на Haskell
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+Есть статья `Efficient Parallel and Incremental Parsing of Practical Context-Free Languages` от JEAN-PHILIPPE BERNARDY & KOEN CLAESSEN (pdfку могу выслать), где авторы пишут, что смогли распараллелить синтаксический анализ для некоторых "хороших" грамматик и получить прирост скорости. У доступна https://github.com/BNFC/bnfc/blob/master/source/runtime/Data/Matrix/Quad.hs[реализация] на Haskell.
+
+Хотелось бы
+* вначале проверить что всё действительно работает так хорошо, как написано
+* применить подход для синтаксического анализа графов
+
+Если на пальцах, то синтаксический анализ направленных графов отличается от анализа строк только тем, что в некоторых местах строка может неоднозначно разветвиться, и парсеру надо проверить все способы разветвления. Для строк такого разветвления нет (последовательность символов в некотором смысле однозанчна).
+
+Руководители mailto:rsdpisuy@gmail.com[Семен Григорьев] (может быть и mailto:Dmitrii.Kosarev@protonmail.ch[Дмитрий Косарев] подключится).
