--- a/fp2019/projects.asciidoc
+++ b/fp2019/projects.asciidoc
@@ -86,14 +86,30 @@ merlin
 ~~~~~~
 
 IDE для функциональных языков не очень хорошо развиты по нескольким причинами:
+
 * за счет другого подхода к программированию потребность в IDE не так сильно ощущается: так как меньше синтаксического мусора, то меньше нужды в автоматических рефакторингах, и прочее.
 * так как потредность в IDE не так ощущается, то мало кто уходит дальше минимальных требований к IDE, которыми явщяются: go-to-definition, показать тип под курсором, подсветка ошибок и прочие мелочи.
 
 Следствие: в области разработки IDE для функциональных языков можно много чего сделать.
 
-Сейчас стандартом IDE для языка OCaml является merlin, который умеет минимальный набор фич
+Сейчас стандартом IDE для языка OCaml является https://github.com/ocaml/merlin[merlin], который сейчас умеет минимальный набор фич.
 
-Хочется его постепенно допилить: различные умные рефакторинги (в частности whole project renaming) и т.д.
+Хочется его постепенно допилить:
+
+* signature help
+  - по локации понять из typedtree, что курсор стоит на применении функции
+  - понять на каком мы аргументе
+  - показать сигнатуру функции + доку (если есть)
+* Выдавать предложения переименовать идентификаторы ради исправления ошибок (например, если человек
+ написал `Lsit` вместо `List`)
+* различные умные рефакторинги, в частности whole project renaming. Сейчас это кое-как умеет делать
+https://gitlab.com/trustworthy-refactoring/refactorer[RoToR], но он не умеет делать больше ничего. Хочется повторить удачную реализацию `RoToR` в `merlin`.
+* и т.д.
+
+В идеале, работа должна заключаться
+
+* и в допиливании backend на OCaml, который занимается анализами и  содержательной частью вообще
+* и в допливании frontend (например, VsCode), который позволяется редактировать код и вызывать рефакторинги непосредственно
 
 
 
