FP2019: lecture 03 info

--- a/fp2019/index.asciidoc
+++ b/fp2019/index.asciidoc
@@ -122,7 +122,13 @@ link:01typedesign.pdf[слайды]
 Неделя 3 (19 сентября)
 ----------------------
 
-// link:01typedesign.pdf[слайды]
+Слайдов нет, будем разбирать https://gitlab.com/Kakadu/haskell-course-demos/tree/master/Expr[код], который вычисляет арифиметические выражения.
+
+[[week4]]
+Неделя 4 (26 сентября)
+----------------------
+
+
 
 
 
