FP2019: notes for scala hackers

--- a/fp2019/index.asciidoc
+++ b/fp2019/index.asciidoc
@@ -94,9 +94,16 @@ link:projects.html[Тут] есть список проектов которые
 
 Стоило бы сдать допуск на вход:
 
-* Cдать https://stepik.org/join-class/3a7513c770b80866b96e18baa03c3ce18e87303e[1ю часть курса] про ФП на степике
-* Cдать https://stepik.org/join-class/a4741bd985027507643baf2b07221c264329b484[2ю часть курса] про ФП на степике
-* TODO: разобраться что там с курсами по Scala.
+* Сдать какой-нибудь онлайн-курс
+**  Для Haskell
+*** Cдать https://stepik.org/join-class/3a7513c770b80866b96e18baa03c3ce18e87303e[1ю часть курса] про ФП на степике
+*** Cдать https://stepik.org/join-class/a4741bd985027507643baf2b07221c264329b484[2ю часть курса] про ФП на степике
+** Scala
+*** Курс на https://stepik.org/course/16243/syllabus[Степике]
+*** Накодить задачу на Scala (в более-менее функциональном стиле, за Scala как Java будут карать!)
+**** 1
+**** 2
+**** 3
 * Колобок про теоркат (но это пока не точно).
 * Домашки в количестве примерно 5 штук
   ** Планируется разрешить писать на Haskell, OCaml/ReasonML или Scala 3 (sic!)
