--- a/fp2019/index.asciidoc
+++ b/fp2019/index.asciidoc
@@ -100,10 +100,11 @@ link:projects.html[Тут] есть список проектов которые
 *** Cдать https://stepik.org/join-class/a4741bd985027507643baf2b07221c264329b484[2ю часть курса] про ФП на степике
 ** Scala
 *** Курс на https://stepik.org/course/16243/syllabus[Степике]
-*** Накодить задачу на Scala (в более-менее функциональном стиле, за Scala как Java будут карать!)
-**** 1
-**** 2
-**** 3
+*** Накодить задачу на Scala 3 (sic!) (в более-менее функциональном стиле, за Scala как Java буду карать!)
+**** Окологеймерская: симуляция мира, в котором кто-то живет и что-то хочет.
+**** Алогритм DPLL (из мира мат.логики) более-менее оптимизированный (hash-consing'ом, например).
+**** Дана программа в AST мини-языка (присваивания, циклы, ветвления, числовые переменные). Программа аннотирована триплетами Хоара. Надо проверить, хорошо ли она (корректно ли) аннотирована. Если некорректно, то сказать где некорректно.
+
 * Колобок про теоркат (но это пока не точно).
 * Домашки в количестве примерно 5 штук
   ** Планируется разрешить писать на Haskell, OCaml/ReasonML или Scala 3 (sic!)
