--- a/fp2019/hw.asciidoc
+++ b/fp2019/hw.asciidoc
@@ -38,25 +38,53 @@ NOTE: Детали обсуждаемы потом
 
 Дальше идет N тем, которые будут определять задачи вида
 
-* Напишите тип данных для представления программ на мини-языке.
-* Сделайте парсер этого языка (как именно делать   будет сказано в курсе Москвина и немного на лекции)
-* Сделайте интерпретатор языка (по аналогии с тем как мы писали `eval` для арифметических выражений на паре №2)
-* Реализуйте какое-нибудь преобразование программ.
+. Напишите тип данных для представления программ на мини-языке.
+. Сделайте парсер этого языка (как именно делать  будет сказано в курсе Москвина и немного на лекции)
+. Сделайте интерпретатор языка (по аналогии с тем как мы писали `eval` для арифметических выражений на паре №2)
+. Реализуйте какое-нибудь преобразование программ (детали будут специфичны для задачи).
+
+Заметим, что задачи 2,3,4 зависят от №1, но не друг от друга. В процессе выполнения 2,3 и 4 может оказаться, что нужно поменять представление программ. Это нормально, т.е. то, что вы напишите в решение пункта 1 скорее всего не будет окончательным.
+
+Далее ниже идут описания языков, у них неявно стоит
+
+* приписка "мини"
+* приписка "написать подробнее".
+
+А также, если кто-то захочет решать одну и ту же задачу, но на разных языках (по-видимому, это будет Scala и
+Haskell), то это нужно предварительно согласовать.
+
+Если кто-то хочет подусложнить задачу и решать одну и ту же вдвоем, то можно также обсудить.
+
+[[One]]
+=== Python
+
+Функции, переменные, присваивания, циклы, ветвления, анонимные функции -- стандартный набор большого количества языков. Потом какие-то языково-специфичные фичи.
 
 [[two]]
-=== 0 фывафывафывафы
+=== Ruby
 
-[[three]]
-=== 1 NOTE: написать подробнее
+Примерно как в Питоне.
+
+=== Kotlin
+
+Тут из языково-специфичных фич обязательно будет какая-то поддержка ООП и вызова методов.
+
+=== SQL
+
+Язык запросов к реляционным базам данных. Различные конструкции можно погуглить. Задачей номер 4 будет скорее
+всего какая-то оптимизация запросов.
 
 
-=== 2
+=== Haskell
 
+Числа, списки, функции, ленивая стратегия вычислений. Без пользовательских типов данных.
 
-=== 3
+=== LISP
 
+LISP известен своими встроенными макросами. Посмотрите примерный синтаксис Scheme (или Common Lisp, и т.д.)
+и напишите интерпретатор, который по дороге дает объявлять и использовать макросы
 
-
+=== Bourne Again Shell
 
 ifdef::backend-docbook[]
 [index]
