--- a/fp2019/hw.asciidoc
+++ b/fp2019/hw.asciidoc
@@ -11,7 +11,7 @@
 
 == Задачки для Скалолазов
 
-Дополнительные, так как у них слишком короткий курс на Степике.
+Дополнительные, так как у них слишком короткий курс на Степике. Если надо будет ещё задачек -- напишите.
 
 === Алгоритм DPLL
 
@@ -33,13 +33,13 @@ NOTE: Детали обсуждаемы потом
 
 
 
-[[general_tasks]]
-== Остальное
+[[hw1234]]
+== Домашки 1-4
 
 Дальше идет N тем, которые будут определять задачи вида
 
 . Напишите тип данных для представления программ на мини-языке.
-. Сделайте парсер этого языка (как именно делать  будет сказано в курсе Москвина и немного на лекции)
+. Сделайте парсер этого языка (как именно делать  будет сказано на лекции и немного в курсе Москвина)
 . Сделайте интерпретатор языка (по аналогии с тем как мы писали `eval` для арифметических выражений на паре №2)
 . Реализуйте какое-нибудь преобразование программ (детали будут специфичны для задачи).
 
@@ -53,7 +53,7 @@ NOTE: Детали обсуждаемы потом
 А также, если кто-то захочет решать одну и ту же задачу, но на разных языках (по-видимому, это будет Scala и
 Haskell), то это нужно предварительно согласовать.
 
-Если кто-то хочет подусложнить задачу и решать одну и ту же вдвоем, то можно также обсудить.
+Если кто-то хочет подусложнить задачу и решать одну и ту же на одном и том же языке _вдвоем_, то можно также обсудить.
 
 [[One]]
 === Python
@@ -64,6 +64,11 @@ Haskell), то это нужно предварительно согласова
 === Ruby
 
 Примерно как в Питоне.
+
+=== Javascript
+
+Стандартный набор языковых конструкций, прототипное наследование. Реализовать все фичи из
+известного https://www.destroyallsoftware.com/talks/wat[видеообзора] Javascript
 
 === Kotlin
 
@@ -77,14 +82,100 @@ Haskell), то это нужно предварительно согласова
 
 === Haskell
 
-Числа, списки, функции, ленивая стратегия вычислений. Без пользовательских типов данных.
+Числа, списки, функции, ленивая стратегия вычислений. Без пользовательских типов данных. В качесве пункта 4 --
+хитрые оптимизации
 
 === LISP
 
 LISP известен своими встроенными макросами. Посмотрите примерный синтаксис Scheme (или Common Lisp, и т.д.)
-и напишите интерпретатор, который по дороге дает объявлять и использовать макросы
+и напишите интерпретатор, который по дороге дает объявлять и использовать макросы. Вдруг у вас получатся
+гигиенические?
+
+=== Scala
+
+Функции, числа и прочий стандартный набор фич. Специфичная для Scala часть языка -- traits.
+
+=== OCaml with objects
+
+Рекурсивные функции, числа, списки, присваивание и... объекты. Наверное, единственный язык, где ООП
+сделано нормально (за счет структурной типизации и так называемого row полиморфизма).
+
+Думаю, что тут проще всего будет меня уговорить назначить на двоих.
+
+=== OCaml/Haskell with GADT
+
+Обобщенные алгебраические типы данных, паттерн-матчинг, проверка типов в контексте GADT.
+
+=== Lua
+
+Интересный минималистичный язык, где в качестве универсальной структуры данных используется помесь
+массива с хэш-таблицей, а для оптимизации вместо целых чисел используеются Double'ы.
 
 === Bourne Again Shell
+
+=== AWK
+
+
+
+=== Ideal Parallel Algol
+
+Стандартный модельный язык для использования в научных ситуациях. Числа, присваивания, циклы, ветвления,
+функции, а также операция запуска N кусков кода параллельно.
+
+
+=== Cи
+
+=== Assembler
+
+Выберите вид ассемблера, который хорошо работает на вашем компьютере/процессоре и почитайте
+виды регистров в данной архитектуре. Реализуйте интерпретатор. Преобразование программ из
+задания 4 скорее всего будет про автоматическую векторизацию. Если по дороге окажется, что
+Вы научились генерировать настоящий ELF файл, который потом можно отдельно исполнить --
+вообще будет круто.
+
+=== Datalog
+
+Простейший представитель логического программирования. Спека должна быть легко находима
+в интернетах
+
+=== NFA
+
+Язык задания недетерминированных конченых автоматов, реализовать вычислитель таких автоматов.
+В качестве №4 будет конвертация в детерминирванный или что-то подобное.
+
+=== РеФаЛ
+
+Отечественный язык программирования. Вдохновения черпать
+https://github.com/bmstu-iu9/refal-5-lambda[отсюда].
+
+
+=== Forth
+
+Так называемый стековый язык программирования, мало похож на всё остальное. Считается
+языком с легко расширяемым синтаксисом.
+
+=== https://en.wikipedia.org/wiki/Promela[Promela]
+
+Входной язык для утилиты верификации.
+
+=== Yacc
+
+Язык описания синтаксических анализаторов (парсеров). Скорее всего его придется сильно упростить
+(без action code'а, описания ассоциативности и приоритетов операций).
+К нему обычно прилагается утилита, которая по описанию генерирует парсер. Сделайте что-то подобное,
+генерируя по описанию парсера код на Haskell/Scala, который выполняет синтаксический анализ.
+Расширениями генерации можно выбрать, например, устранение левой рекурсии.
+
+[[hw5]]
+== Домашки №5
+
+Скорее всего про структуры данных
+
+[[hw6]]
+== Домашки №6
+
+Скорее всего про динамическое программирование
+
 
 ifdef::backend-docbook[]
 [index]
