--- a/fp2019/hw.asciidoc
+++ b/fp2019/hw.asciidoc
@@ -31,7 +31,7 @@ NOTE: Детали обсуждаемы потом
 
 Про триплеты Хоара по-русски можно читать, например, в книжке Герасимова "Математическая логика".
 
-
+Выбравшему эту задачу можно упростить себе жизнь, выбрав правильный вариант домашки.
 
 [[hw1234]]
 == Домашки 1-4
@@ -55,12 +55,10 @@ Haskell), то это нужно предварительно согласова
 
 Если кто-то хочет подусложнить задачу и решать одну и ту же на одном и том же языке _вдвоем_, то можно также обсудить.
 
-[[One]]
 === Python
 
 Функции, переменные, присваивания, циклы, ветвления, анонимные функции -- стандартный набор большого количества языков. Потом какие-то языково-специфичные фичи.
 
-[[two]]
 === Ruby
 
 Примерно как в Питоне.
@@ -72,13 +70,12 @@ Haskell), то это нужно предварительно согласова
 
 === Kotlin
 
-Тут из языково-специфичных фич обязательно будет какая-то поддержка ООП и вызова методов.
+Тут из языково-специфичных фич обязательно должна быть какая-то поддержка ООП и вызова методов.
 
 === SQL
 
 Язык запросов к реляционным базам данных. Различные конструкции можно погуглить. Задачей номер 4 будет скорее
 всего какая-то оптимизация запросов.
-
 
 === Haskell
 
@@ -104,26 +101,32 @@ LISP известен своими встроенными макросами. П
 
 === OCaml/Haskell with GADT
 
-Обобщенные алгебраические типы данных, паттерн-матчинг, проверка типов в контексте GADT.
+Обобщенные алгебраические типы данных, паттерн-матчинг, проверка типов для паттерн-мэтчинга
+с использованием GADT.
+
+Наверное, тут тоже можно парочку.
 
 === Lua
 
 Интересный минималистичный язык, где в качестве универсальной структуры данных используется помесь
 массива с хэш-таблицей, а для оптимизации вместо целых чисел используеются Double'ы.
 
-=== Bourne Again Shell
+=== Bourne Again SHell
+
+Все, кто трогал линукс, видели эту штуку.
 
 === AWK
 
-
+Предшественник языка Perl
 
 === Ideal Parallel Algol
 
 Стандартный модельный язык для использования в научных ситуациях. Числа, присваивания, циклы, ветвления,
 функции, а также операция запуска N кусков кода параллельно.
 
-
 === Cи
+
+Интерпретатор языка с поддержкой арфиметики указателей.
 
 === Assembler
 
@@ -143,22 +146,22 @@ LISP известен своими встроенными макросами. П
 Язык задания недетерминированных конченых автоматов, реализовать вычислитель таких автоматов.
 В качестве №4 будет конвертация в детерминирванный или что-то подобное.
 
+[[refal]]
 === РеФаЛ
 
 Отечественный язык программирования. Вдохновения черпать
 https://github.com/bmstu-iu9/refal-5-lambda[отсюда].
-
 
 === Forth
 
 Так называемый стековый язык программирования, мало похож на всё остальное. Считается
 языком с легко расширяемым синтаксисом.
 
-=== https://en.wikipedia.org/wiki/Promela[Promela]
+=== Promela
 
-Входной язык для утилиты верификации.
+Входной язык для утилиты верификации https://en.wikipedia.org/wiki/Promela[Promela].
 
-=== Yacc
+=== YACC
 
 Язык описания синтаксических анализаторов (парсеров). Скорее всего его придется сильно упростить
 (без action code'а, описания ассоциативности и приоритетов операций).
