--- a/fp2019/hw.asciidoc
+++ b/fp2019/hw.asciidoc
@@ -58,6 +58,7 @@ Haskell), то это нужно предварительно согласова
 === Python
 
 Функции, переменные, присваивания, циклы, ветвления, анонимные функции -- стандартный набор большого количества языков. Потом какие-то языково-специфичные фичи.
+Смотрите также на https://chocopy.org/[ChocoPy].
 
 === Ruby
 
