--- a/fp2019/hw.asciidoc
+++ b/fp2019/hw.asciidoc
@@ -55,6 +55,8 @@ Haskell), то это нужно предварительно согласова
 
 Если кто-то хочет подусложнить задачу и решать одну и ту же на одном и том же языке _вдвоем_, то можно также обсудить.
 
+Проверяться будет как программа работает, а также будут вопросы по коду программы (потому что все задачи гуглятся).
+
 === Python
 
 Функции, переменные, присваивания, циклы, ветвления, анонимные функции -- стандартный набор большого количества языков. Потом какие-то языково-специфичные фичи.
@@ -80,8 +82,12 @@ Haskell), то это нужно предварительно согласова
 
 === Haskell
 
-Числа, списки, функции, ленивая стратегия вычислений. Без пользовательских типов данных. В качесве пункта 4 --
-хитрые оптимизации
+Числа, списки, функции, ленивая стратегия вычислений. Без пользовательских типов данных. В качестве пункта 4 --
+хитрые оптимизации. Алгоритм вывода типов пока не включаю, но написать
+http://okmij.org/ftp/ML/generalization.html[_эффективный_] (почти линейный) алгоритм вывода типов может быть
+[.line-through]#сложной# интересной задачей.
+
+Тут легко можно договориться на 2 человека.
 
 === LISP
 
@@ -91,7 +97,9 @@ LISP известен своими встроенными макросами. П
 
 === Scala
 
-Функции, числа и прочий стандартный набор фич. Специфичная для Scala часть языка -- traits.
+Функции, числа и прочий стандартный набор фич. Специфичная для Scala часть языка -- traits. Вообще, чтобы сделать это правильно там нужно прикручивать движок перебора с возвратами a la Datalog.
+
+Наверное, можно притянуть на 2х человек, если алгоритм под капотом будет годный.
 
 === OCaml with objects
 
@@ -127,7 +135,8 @@ LISP известен своими встроенными макросами. П
 
 === Cи
 
-Интерпретатор языка с поддержкой арфиметики указателей.
+Интерпретатор языка с поддержкой арфиметики указателей. Наверное будет несложно сделать, есть куча проектов в
+интернетике про реализацию минималистичного компилятора Си в несколько сотен строчек.
 
 === Assembler
 
@@ -144,7 +153,9 @@ LISP известен своими встроенными макросами. П
 
 === NFA
 
-Язык задания недетерминированных конченых автоматов, реализовать вычислитель таких автоматов.
+Язык задания недетерминированных конченых автоматов, реализовать вычислитель таких автоматов,
+а такжен загрузку из файла (наверняка уже придумали какой-то стандартный формат для представления автоматов,
+может быть graphviz?)
 В качестве №4 будет конвертация в детерминирванный или что-то подобное.
 
 [[refal]]
@@ -169,6 +180,8 @@ https://github.com/bmstu-iu9/refal-5-lambda[отсюда].
 К нему обычно прилагается утилита, которая по описанию генерирует парсер. Сделайте что-то подобное,
 генерируя по описанию парсера код на Haskell/Scala, который выполняет синтаксический анализ.
 Расширениями генерации можно выбрать, например, устранение левой рекурсии.
+
+
 
 [[hw5]]
 == Домашки №5
