--- a/fp2019/hw.asciidoc
+++ b/fp2019/hw.asciidoc
@@ -8,6 +8,7 @@
 :Author: Dmitrii Kosarev a.k.a. Kakadu
 :email:  Dmitrii.Kosarev@protonmail.ch
 
+Переход на link:index.html[главную страницу курса]
 
 == Задачки для Скалолазов
 
@@ -15,7 +16,7 @@
 
 === Алгоритм DPLL
 
-Задача из мира математической логики про выполнимость формулы языка высказываний. В том году давал на экзамен. Сейчас хочу сам алгоритм  с какими-нибудь оптимизациями (например, hash consing).
+Задача из мира математической логики про выполнимость формулы языка высказываний. В том году давал на экзамен. Сейчас хочу сам алгоритм с какими-нибудь оптимизациями (например, hash consing).
 
 Сам алгоритм должен довольно легко гуглиться.
 
@@ -77,10 +78,10 @@ Haskell), то это нужно предварительно согласова
 
 === SQL
 
-Язык запросов к реляционным базам данных. Различные конструкции можно погуглить. Задачей номер 4 будет скорее
+Язык запросов к реляционным базам данных, давал в том году на экзамене. Различные конструкции можно погуглить. Задачей номер 4 будет скорее
 всего какая-то оптимизация запросов.
 
-=== Haskell
+=== Haskell (1-2 человека)
 
 Числа, списки, функции, ленивая стратегия вычислений. Без пользовательских типов данных. В качестве пункта 4 --
 хитрые оптимизации. Алгоритм вывода типов пока не включаю, но написать
@@ -95,27 +96,28 @@ LISP известен своими встроенными макросами. П
 и напишите интерпретатор, который по дороге дает объявлять и использовать макросы. Вдруг у вас получатся
 гигиенические?
 
-=== Scala
+=== Scala (1-2 человека)
 
 Функции, числа и прочий стандартный набор фич. Специфичная для Scala часть языка -- traits. Вообще, чтобы сделать это правильно там нужно прикручивать движок перебора с возвратами a la Datalog.
 
 Наверное, можно притянуть на 2х человек, если алгоритм под капотом будет годный.
 
-=== OCaml with objects
+=== OCaml with objects (2 человека)
 
-Рекурсивные функции, числа, списки, присваивание и... объекты. Наверное, единственный язык, где ООП
-сделано нормально (за счет структурной типизации и так называемого row полиморфизма).
+Числа, списки, присваивание, объекты и их рекурсивные методы вместо рекурсивных функций.
+Наверное, единственный язык, где ООП сделано нормально (за счет структурной типизации и
+так называемого row-полиморфизма).
 
 Думаю, что тут проще всего будет меня уговорить назначить на двоих.
 
-=== OCaml/Haskell with GADT
+=== OCaml/Haskell with GADT (2 человека)
 
-Обобщенные алгебраические типы данных, паттерн-матчинг, проверка типов для паттерн-мэтчинга
+Числа, функции и обобщенные алгебраические типы данных, паттерн-матчинг, проверка типов для паттерн-мэтчинга
 с использованием GADT.
 
 Наверное, тут тоже можно парочку.
 
-=== Lua
+=== Lua (Цириков?)
 
 Интересный минималистичный язык, где в качестве универсальной структуры данных используется помесь
 массива с хэш-таблицей, а для оптимизации вместо целых чисел используеются Double'ы.
@@ -128,10 +130,28 @@ LISP известен своими встроенными макросами. П
 
 Предшественник языка Perl
 
-=== Ideal Parallel Algol
+=== Ideal Parallel Algol (1 человек)
 
-Стандартный модельный язык для использования в научных ситуациях. Числа, присваивания, циклы, ветвления,
-функции, а также операция запуска N кусков кода параллельно.
+Стандартный модельный язык для использования в научных ситуациях. Числа, ветвления, присваивания, барьеры
+для чтения и записи, а также операция запуска N кусков кода параллельно.
+Функции и циклы не добавляю, а хочу, чтобы были реализованы
+несколько _моделей памяти_ для данной программы.
+
+- sequentional consistency (SC). Исполнение программы произвольно перемежается между параллельными
+участками и выполняет по одной инструкции. Самая интуитивная реализация, ни один процессор такой не соответствует.
+- TSO -- модель процессоров x86. В ней возможны интересные поведения.
+Если изначально `x = EAX = y = EBX = 0`, то после выполнения этих двух участков параллельного кода,
+  x86 может остановиться в состоянии `EAX == 0 && EBX == 0`
+....
+#  Proc 1                           Proc 2
+MOV  [x] ← 1         |         MOV  [y] ← 1
+MOV  EAX ← [y]       |         MOV  EBX ← [x]
+....
+
+- может быть ещё какая-то модель памяти.
+
+Вот https://people.mpi-sws.org/~viktor/wmc/operational.pdf[это] будет хорошей ссылкой, если уметь разбираться
+в исчислениях (я планирую про это как-то рассказывать).
 
 === Cи
 
