--- a/fp2019/hw.asciidoc
+++ b/fp2019/hw.asciidoc
@@ -58,6 +58,56 @@ Haskell), то это нужно предварительно согласова
 
 Проверяться будет как программа работает, а также будут вопросы по коду программы (потому что все задачи гуглятся).
 
+=== Lua (Цириков)
+
+Интересный минималистичный язык, где в качестве универсальной структуры данных используется помесь
+массива с хэш-таблицей, а для оптимизации вместо целых чисел используеются Double'ы.
+
+=== SQL (Погожельская)
+
+Язык запросов к реляционным базам данных, давал в том году на экзамене. Различные конструкции можно погуглить. Задачей номер 4 будет скорее
+всего какая-то оптимизация запросов.
+
++++ <details><summary> +++
+TODO: *написать подробнее под спойлер*
++++ </summary><div> +++
+
+TODO:
++++ </div></details> +++
+
+=== Bourne Again SHell (Абзалов)
+
+Все, кто трогал линукс, видели эту штуку.
+
++++ <details><summary> +++
+Подробнее *под спойлером*
++++ </summary><div> +++
+
+В качестве BASH можно попробовать делать другой shell, если Вам он будет больше нравиться или Вы им постоянно пользуетесь на компьютере. В итоге хочется получить как минимум интерактивный интерпретатор shell, который можно
+попробовать запустить вместо того, что у вас запускается сейчас на входе в GNU/Linux. Обратите внимание, что
+те слова, которые есть в программе, bash впервую очередь пытается интерпретировать как вызов системной утилиты
+(например, у меня на компьютере есть `/usr/bin/[`, но нет `/usr/bin/[[`), а только потом интерпретировать по-своему. Из этого следует, что Ваш интепретатор должен уметь по ходу делать и выполнять IO действия, и поддерживать в каком-то виде сообщения об ошибках. Обратите также внимание, что системный bash работает, как интепретатор, т.е. перемежает исполнение с синтаксическим анализом.
+----
+$ cat /tmp/1.sh
+printf "1\n"
+if [[[[ asdfasdf ]]]]; then echo 33; fi
+printf "2\n"
+$ bash /tmp/1.sh
+1
+/tmp/1.sh: ligne 2: [[[[ : commande introuvable
+2
+----
+Для тестирования программ часто используют квайны -- программы печатающие сами себя. Протестируйте интерпретатор на десятке квайнов, реализуйте те функции интерпретатора, которые нужна для запуска этих квайнов. Например,
+https://frishit.wordpress.com/2010/04/26/paradoxes-self-reproducing-code-and-bash/[это], или
+----
+$ s='s=\47%s\47; printf "$s" "$s"'; printf "$s" "$s"
+s='s=\47%s\47; printf "$s" "$s"'; printf "$s" "$s"
+$ echo 'echo $BASH_COMMAND'
+echo $BASH_COMMAND
+----
+Разумеется, нужно поддержать объявления функций и прочие управляющие конструкции, числа, ветвления, строки
++++ </div></details> +++
+
 === Python
 
 Функции, переменные, присваивания, циклы, ветвления, анонимные функции -- стандартный набор большого количества языков. Потом какие-то языково-специфичные фичи.
@@ -75,11 +125,6 @@ Haskell), то это нужно предварительно согласова
 === Kotlin
 
 Тут из языково-специфичных фич обязательно должна быть какая-то поддержка ООП и вызова методов.
-
-=== SQL
-
-Язык запросов к реляционным базам данных, давал в том году на экзамене. Различные конструкции можно погуглить. Задачей номер 4 будет скорее
-всего какая-то оптимизация запросов.
 
 === Haskell (1-2 человека)
 
@@ -117,14 +162,6 @@ LISP известен своими встроенными макросами. П
 
 Наверное, тут тоже можно парочку.
 
-=== Lua (Цириков?)
-
-Интересный минималистичный язык, где в качестве универсальной структуры данных используется помесь
-массива с хэш-таблицей, а для оптимизации вместо целых чисел используеются Double'ы.
-
-=== Bourne Again SHell
-
-Все, кто трогал линукс, видели эту штуку.
 
 === AWK
 
