--- a/fp2019/hw.asciidoc
+++ b/fp2019/hw.asciidoc
@@ -69,10 +69,71 @@ Haskell), то это нужно предварительно согласова
 всего какая-то оптимизация запросов.
 
 +++ <details><summary> +++
-TODO: *написать подробнее под спойлер*
+[.underline]#*Подробнее (спойлер)*#
 +++ </summary><div> +++
 
-TODO:
+Необходимо реализовать минисистему баз данных. Программа должна уметь дампить информацию в файл, восстанавливать из файла и выполнять (парсер + интерпретатор) запросы к базе данных в интерактивном режиме. Для ввода-вывода данных в/из файл парсер и принтер писать не обязательно, можно обойтись более прямолинейными способами; парсер нужен только для языка запросов SQL. Список запросов возьмем сокращенно-стандартный. Конкретный синтаксис посмотрите в документации к, например, mySQL, здесь я напишу только несколько примеров.
+
+. Создание таблиц. Из типов давайте оставим только Int и String (который в базах данных обычно называется VarChar)
++
+--
+----
+CREATE TABLE table1 ( String FirstName
+                    , String LastName
+                    , Int Id
+                    , Int Age)
+----
+--
+. Добавление данных в таблицу. Если кто-то добавляет Int туда, где ожидался тип String -- выругиваться.
++
+--
+----
+INSERT INTO table1 VALUES ('vasya','pupkin',1,2),
+                          ('ivan', 'ivanov',2,2)
+----
+--
+. Выбор данных из таблицы с выдачей табличного результата
++
+--
+----
+SELECT * FROM  table1
+----
+
+или
+
+----
+SELECT (FirstName,LastName) FROM table1 WHERE Age>18
+----
+--
+
+. Удаление данных из таблицы
++
+----
+REMOVE FROM table1 WHERE Age>18
+----
+. Join (он же inner join) таблиц, который формально является декартовом перемножением всех строчек в таблицах с последующей фильтрацией. Можно также поддержать другие JOIN'ы (LEFT, OUTER, CROSS). Они работают чуть-чуть по-другому.
++
+--
+----
+SELECT (a, tableX.id, tableY.id) FROM tableX
+   JOIN tableY
+   ON table1.id = table2.somekey
+----
+или даже вложенные join'ы
+----
+SELECT * FROM A
+  JOIN (B JOIN C ON B.fkC = C.pk)
+  ON A.optionalfkB = B.pk
+----
+--
+. Хранимые процедуры (у всех есть, и тут пусть будут)
+
+
+В качестве задачи 4 будут какие-то оптимизации запросов, например
+
+- Вложенные join'ы должен вычисляться не в стиле generate&filter, а как-нибудь более оптимально.
+- Что-то ещё, пока не придумал.
+
 +++ </div></details> +++
 
 === Bourne Again SHell (Абзалов)
@@ -80,7 +141,7 @@ TODO:
 Все, кто трогал линукс, видели эту штуку.
 
 +++ <details><summary> +++
-Подробнее *под спойлером*
+[.underline]#*Подробнее (спойлер)*#
 +++ </summary><div> +++
 
 В качестве BASH можно попробовать делать другой shell, если Вам он будет больше нравиться или Вы им постоянно пользуетесь на компьютере. В итоге хочется получить как минимум интерактивный интерпретатор shell, который можно
