--- a/papers/pfds/pfds_talk.tex
+++ b/papers/pfds/pfds_talk.tex
@@ -92,6 +92,24 @@
   \tableofcontents
 \end{frame}
 
+\begin{frame}[fragile]{Сигнатура Stack. Реализация через встроенные списки}
+\begin{minipage}{.48\textwidth}
+\inputminted{haskell}{code/Stack.hs}
+\end{minipage}
+\begin{minipage}{.48\textwidth}
+\inputminted{haskell}{code/ListStack.hs}
+\end{minipage}
+\end{frame}
+
+\begin{frame}[fragile]{Сигнатура Stack. Реализация через новый тип данных}
+\begin{minipage}{.48\textwidth}
+  \inputminted{haskell}{code/Stack.hs}
+\end{minipage}
+\begin{minipage}{.48\textwidth}
+  \inputminted{haskell}{code/CustomStack.hs}
+\end{minipage}
+\end{frame}
+
 \begin{frame}[fragile]{}
 \begin{figure}[h]
 %	\centering
